--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -1,13 +1,18 @@
-name: "Bug Report"
-description: "Report a bug in the project"
+name: "🐞 Bug Report"
+description: "Report something not working"
 labels: ["bug"]
 body:
   - type: textarea
-    id: description
+    id: bug_summary
     attributes:
-      label: "Describe the bug"
+      label: "What’s wrong?"
   - type: textarea
-    id: steps
+    id: how_to_reproduce
     attributes:
-      label: "Steps to reproduce"
+      label: "How can we reproduce it?"
+  - type: textarea
+    id: expected_output
+    attributes:
+      label: "What did you expect to happen?"
+
 
